<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SortVizualization</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_elements">Enter number of elements</string>
    <string name="heap_sort">Heap Sort</string>
    <string name="bucket_sort">Bucket Sort</string>
    <string name="generate_array">Generate Array</string>
    <string name="array_empty">Array is Empty</string>

</resources>
